crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__variable_get-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"_var\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Var(
                            (
                                "_var",
                                0..4,
                            ),
                        ),
                        0..4,
                    ),
                ),
                0..4,
            ),
        ),
        0..4,
    ),
]
