crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__variable_get.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"name\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Var(
                            (
                                "name",
                                0..4,
                            ),
                        ),
                        0..4,
                    ),
                ),
                0..4,
            ),
        ),
        0..4,
    ),
]
